// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`offset pagination renders a pagination component 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  padding: 0.75rem;
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
}

.c6:first-of-type {
  padding-left: 1.5rem;
}

.c6:last-of-type {
  padding-right: 1.5rem;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c5:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

<table
  class="c0"
  id=":r12:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c2 c3 c4"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c2 c3 c4"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c2 c3 c4"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          SM13
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Smith Journal 13
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          25
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          DPB
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Dustpan & Brush
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          34
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          OFSUC
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Utility Caddy
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          45
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          CLC
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Canvas Laundry Cart
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          2
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          CGLD
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Laundry Detergent
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          29
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders a simple table 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  padding: 0.75rem;
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
}

.c6:first-of-type {
  padding-left: 1.5rem;
}

.c6:last-of-type {
  padding-right: 1.5rem;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c5:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

<table
  class="c0"
  id=":r0:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c2 c3 c4"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c2 c3 c4"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c2 c3 c4"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          SM13
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Smith Journal 13
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          25
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          DPB
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Dustpan & Brush
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          34
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          OFSUC
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Utility Caddy
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          45
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          CLC
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Canvas Laundry Cart
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          2
        </div>
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          CGLD
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          [Sample] Laundry Detergent
        </div>
      </td>
      <td
        class="c6"
      >
        <div
          class="c2 c3"
        >
          29
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders a table figure 1`] = `
.c0 {
  margin: 0;
  max-width: 100%;
  overflow-x: auto;
  white-space: nowrap;
}

@media (min-width:720px) {
  .c0 {
    white-space: normal;
  }
}

<figure
  class="c0"
/>
`;

exports[`selectable renders selectable actions and checkboxes 1`] = `
.c14 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c16:last-child {
  margin-bottom: 0;
}

.c17 {
  cursor: pointer;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c15 {
  margin-left: 0.5rem;
}

.c9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c13:hover {
  border-color: #B4BAD1;
}

.c10:focus + .c12 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c13 svg {
  opacity: 0;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c2 {
  width: 2.25rem;
  white-space: nowrap;
}

.c5 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
  width: 10px;
}

.c7:first-of-type {
  padding-left: 0;
}

.c7:last-of-type {
  padding-right: 0;
}

.c18 {
  padding: 0.75rem;
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
}

.c18:first-of-type {
  padding-left: 1.5rem;
}

.c18:last-of-type {
  padding-right: 1.5rem;
}

.c8 {
  background-color: #FFFFFF;
  padding: 0 0.75rem;
}

.c8:first-of-type {
  padding-left: 1.5rem;
}

.c6 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c6:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

<table
  class="c0"
  id=":r8j:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1 c2"
      />
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c3 c4 c5"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c3 c4 c5"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c3 c4 c5"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r8r:"
            class="c10 c11"
            id=":r8q:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r8q:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r8q:"
              hidden=""
              id=":r8r:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          SM13
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          [Sample] Smith Journal 13
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          25
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r8u:"
            class="c10 c11"
            id=":r8t:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r8t:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r8t:"
              hidden=""
              id=":r8u:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          DPB
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          [Sample] Dustpan & Brush
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          34
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r91:"
            class="c10 c11"
            id=":r90:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r90:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r90:"
              hidden=""
              id=":r91:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          OFSUC
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          [Sample] Utility Caddy
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          45
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r94:"
            class="c10 c11"
            id=":r93:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r93:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r93:"
              hidden=""
              id=":r94:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          CLC
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          [Sample] Canvas Laundry Cart
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          2
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r97:"
            class="c10 c11"
            id=":r96:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r96:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r96:"
              hidden=""
              id=":r97:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          CGLD
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          [Sample] Laundry Detergent
        </div>
      </td>
      <td
        class="c18"
      >
        <div
          class="c3 c4"
        >
          29
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`selectable selectable by default (isChildrenRowsSelectable prop is not used or is set to false) when isChildrenRowsSelectable prop is not used or is set to false, as default renders checkboxes just for parent rows 1`] = `
.c14 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c16:last-child {
  margin-bottom: 0;
}

.c19 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c19:focus {
  outline: none;
}

.c19[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c19 + .bd-button {
  margin-top: 0.5rem;
}

.c19:active {
  background-color: #DBE3FE;
}

.c19:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c19:hover:not(:active) {
  background-color: #F0F3FF;
}

.c19[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c21 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c17 {
  cursor: pointer;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c15 {
  margin-left: 0.5rem;
}

.c9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c13:hover {
  border-color: #B4BAD1;
}

.c10:focus + .c12 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c13 svg {
  opacity: 0;
}

.c20 {
  background-color: transparent;
  border: none;
  color: #313440;
  height: auto;
  min-width: auto;
  padding: 0;
}

.c20:active {
  background-color: #DBE3FE;
}

.c20:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c20:hover:not(:active) {
  background-color: #F0F3FF;
}

.c20[disabled] {
  color: #D9DCE9;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c2 {
  width: 2.25rem;
  white-space: nowrap;
}

.c5 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
  width: 10px;
}

.c7:first-of-type {
  padding-left: 0;
}

.c7:last-of-type {
  padding-right: 0;
}

.c18 {
  padding-left: 0;
  padding-right: 0;
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
  text-align: center;
}

.c18:first-of-type {
  padding-left: 1.5rem;
}

.c18:last-of-type {
  padding-right: 1.5rem;
}

.c22 {
  padding: 0.75rem;
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
}

.c22:first-of-type {
  padding-left: 1.5rem;
}

.c22:last-of-type {
  padding-right: 1.5rem;
}

.c23 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
}

.c23:first-of-type {
  padding-left: 0;
}

.c23:last-of-type {
  padding-right: 0;
}

.c8 {
  background-color: #FFFFFF;
  padding: 0 0.75rem;
  padding-right: 0;
}

.c8:first-of-type {
  padding-left: 1.5rem;
}

.c6 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c6:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

@media (min-width:720px) {
  .c19 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c19 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<table
  class="c0"
  id=":r99:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1 c2"
      />
      <th
        class="c1 c2"
      />
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c3 c4 c5"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c3 c4 c5"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c3 c4 c5"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r9h:"
            class="c10 c11"
            id=":r9g:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r9g:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r9g:"
              hidden=""
              id=":r9h:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <button
          class="c19 c20"
          type="button"
        >
          <span
            class="c21"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M24 24H0V0h24z"
                fill="none"
                opacity="0.87"
              />
              <path
                d="M15.88 9.29 12 13.17 8.12 9.29a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0"
              />
            </svg>
          </span>
        </button>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          SM13
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Smith Journal 13
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          25
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          SM13-1
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Small smith journal
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          10
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          SM13-2
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Large smith journal
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          15
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r9l:"
            class="c10 c11"
            id=":r9k:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r9k:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r9k:"
              hidden=""
              id=":r9l:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <button
          class="c19 c20"
          type="button"
        >
          <span
            class="c21"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M24 24H0V0h24z"
                fill="none"
                opacity="0.87"
              />
              <path
                d="M15.88 9.29 12 13.17 8.12 9.29a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0"
              />
            </svg>
          </span>
        </button>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          DPB
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Dustpan & Brush
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          34
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          DPB-1
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Small dustpan and brush
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          20
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          DPB-2
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Large dustpan and brush
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          14
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r9p:"
            class="c10 c11"
            id=":r9o:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r9o:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r9o:"
              hidden=""
              id=":r9p:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <button
          class="c19 c20"
          type="button"
        >
          <span
            class="c21"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M24 24H0V0h24z"
                fill="none"
                opacity="0.87"
              />
              <path
                d="M15.88 9.29 12 13.17 8.12 9.29a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0"
              />
            </svg>
          </span>
        </button>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          OFSUC
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Utility Caddy
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          45
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          OFSUC-1
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Small utility caddy
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          20
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          OFSUC-2
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Large utility caddy
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          25
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r9t:"
            class="c10 c11"
            id=":r9s:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r9s:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r9s:"
              hidden=""
              id=":r9t:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          CLC
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Canvas Laundry Cart
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          2
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":ra0:"
            class="c10 c11"
            id=":r9v:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r9v:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r9v:"
              hidden=""
              id=":ra0:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          CGLD
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Laundry Detergent
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          29
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`selectable selectable by not default (isChildrenRowsSelectable prop is used and it is set to true renders checkboxes for parent rows and children rows) 1`] = `
.c14 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c16:last-child {
  margin-bottom: 0;
}

.c19 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: transparent;
  color: #3C64F4;
}

.c19:focus {
  outline: none;
}

.c19[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c19 + .bd-button {
  margin-top: 0.5rem;
}

.c19:active {
  background-color: #DBE3FE;
}

.c19:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c19:hover:not(:active) {
  background-color: #F0F3FF;
}

.c19[disabled] {
  border-color: transparent;
  color: #D9DCE9;
}

.c21 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
}

.c17 {
  cursor: pointer;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c15 {
  margin-left: 0.5rem;
}

.c9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c13:hover {
  border-color: #B4BAD1;
}

.c10:focus + .c12 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c13 svg {
  opacity: 0;
}

.c20 {
  background-color: transparent;
  border: none;
  color: #313440;
  height: auto;
  min-width: auto;
  padding: 0;
}

.c20:active {
  background-color: #DBE3FE;
}

.c20:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c20:hover:not(:active) {
  background-color: #F0F3FF;
}

.c20[disabled] {
  color: #D9DCE9;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c2 {
  width: 2.25rem;
  white-space: nowrap;
}

.c5 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
  width: 10px;
}

.c7:first-of-type {
  padding-left: 0;
}

.c7:last-of-type {
  padding-right: 0;
}

.c18 {
  padding-left: 0;
  padding-right: 0;
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
  text-align: center;
}

.c18:first-of-type {
  padding-left: 1.5rem;
}

.c18:last-of-type {
  padding-right: 1.5rem;
}

.c22 {
  padding: 0.75rem;
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
}

.c22:first-of-type {
  padding-left: 1.5rem;
}

.c22:last-of-type {
  padding-right: 1.5rem;
}

.c23 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  border-bottom: 1px solid #D9DCE9;
}

.c23:first-of-type {
  padding-left: 0;
}

.c23:last-of-type {
  padding-right: 0;
}

.c8 {
  background-color: #FFFFFF;
  padding: 0 0.75rem;
  padding-right: 0;
}

.c8:first-of-type {
  padding-left: 1.5rem;
}

.c6 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c6:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

@media (min-width:720px) {
  .c19 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c19 {
    width: auto;
    padding: 0;
    min-width: 2.25rem;
  }
}

<table
  class="c0"
  id=":rd0:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1 c2"
      />
      <th
        class="c1 c2"
      />
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c3 c4 c5"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c3 c4 c5"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c3 c4 c5"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":rd8:"
            class="c10 c11"
            id=":rd7:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":rd7:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":rd7:"
              hidden=""
              id=":rd8:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <button
          class="c19 c20"
          type="button"
        >
          <span
            class="c21"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M24 24H0V0h24z"
                fill="none"
                opacity="0.87"
              />
              <path
                d="M15.88 9.29 12 13.17 8.12 9.29a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0"
              />
            </svg>
          </span>
        </button>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          SM13
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Smith Journal 13
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          25
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          <div
            class="c9"
          >
            <input
              aria-checked="false"
              aria-labelledby=":rdr:"
              class="c10 c11"
              id=":rdq:"
              type="checkbox"
              width="0"
            />
            <label
              aria-hidden="true"
              class="c12 c13"
              for=":rdq:"
            >
              <svg
                aria-hidden="true"
                class="c14"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
                />
              </svg>
            </label>
            <div
              class="c15"
            >
              <label
                class="c16 c17"
                for=":rdq:"
                hidden=""
                id=":rdr:"
              >
                Unselected
              </label>
            </div>
          </div>
          SM13-1
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Small smith journal
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          10
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          <div
            class="c9"
          >
            <input
              aria-checked="false"
              aria-labelledby=":rdu:"
              class="c10 c11"
              id=":rdt:"
              type="checkbox"
              width="0"
            />
            <label
              aria-hidden="true"
              class="c12 c13"
              for=":rdt:"
            >
              <svg
                aria-hidden="true"
                class="c14"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
                />
              </svg>
            </label>
            <div
              class="c15"
            >
              <label
                class="c16 c17"
                for=":rdt:"
                hidden=""
                id=":rdu:"
              >
                Unselected
              </label>
            </div>
          </div>
          SM13-2
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Large smith journal
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          15
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":rdc:"
            class="c10 c11"
            id=":rdb:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":rdb:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":rdb:"
              hidden=""
              id=":rdc:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <button
          class="c19 c20"
          type="button"
        >
          <span
            class="c21"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M24 24H0V0h24z"
                fill="none"
                opacity="0.87"
              />
              <path
                d="M15.88 9.29 12 13.17 8.12 9.29a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0"
              />
            </svg>
          </span>
        </button>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          DPB
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Dustpan & Brush
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          34
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          <div
            class="c9"
          >
            <input
              aria-checked="false"
              aria-labelledby=":re2:"
              class="c10 c11"
              id=":re1:"
              type="checkbox"
              width="0"
            />
            <label
              aria-hidden="true"
              class="c12 c13"
              for=":re1:"
            >
              <svg
                aria-hidden="true"
                class="c14"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
                />
              </svg>
            </label>
            <div
              class="c15"
            >
              <label
                class="c16 c17"
                for=":re1:"
                hidden=""
                id=":re2:"
              >
                Unselected
              </label>
            </div>
          </div>
          DPB-1
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Small dustpan and brush
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          20
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          <div
            class="c9"
          >
            <input
              aria-checked="false"
              aria-labelledby=":re5:"
              class="c10 c11"
              id=":re4:"
              type="checkbox"
              width="0"
            />
            <label
              aria-hidden="true"
              class="c12 c13"
              for=":re4:"
            >
              <svg
                aria-hidden="true"
                class="c14"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
                />
              </svg>
            </label>
            <div
              class="c15"
            >
              <label
                class="c16 c17"
                for=":re4:"
                hidden=""
                id=":re5:"
              >
                Unselected
              </label>
            </div>
          </div>
          DPB-2
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Large dustpan and brush
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          14
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":rdg:"
            class="c10 c11"
            id=":rdf:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":rdf:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":rdf:"
              hidden=""
              id=":rdg:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        <button
          class="c19 c20"
          type="button"
        >
          <span
            class="c21"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M24 24H0V0h24z"
                fill="none"
                opacity="0.87"
              />
              <path
                d="M15.88 9.29 12 13.17 8.12 9.29a.996.996 0 1 0-1.41 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59a.996.996 0 0 0 0-1.41c-.39-.38-1.03-.39-1.42 0"
              />
            </svg>
          </span>
        </button>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          OFSUC
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Utility Caddy
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          45
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          <div
            class="c9"
          >
            <input
              aria-checked="false"
              aria-labelledby=":re9:"
              class="c10 c11"
              id=":re8:"
              type="checkbox"
              width="0"
            />
            <label
              aria-hidden="true"
              class="c12 c13"
              for=":re8:"
            >
              <svg
                aria-hidden="true"
                class="c14"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
                />
              </svg>
            </label>
            <div
              class="c15"
            >
              <label
                class="c16 c17"
                for=":re8:"
                hidden=""
                id=":re9:"
              >
                Unselected
              </label>
            </div>
          </div>
          OFSUC-1
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Small utility caddy
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          20
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c23"
      />
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          <div
            class="c9"
          >
            <input
              aria-checked="false"
              aria-labelledby=":rec:"
              class="c10 c11"
              id=":reb:"
              type="checkbox"
              width="0"
            />
            <label
              aria-hidden="true"
              class="c12 c13"
              for=":reb:"
            >
              <svg
                aria-hidden="true"
                class="c14"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
                />
              </svg>
            </label>
            <div
              class="c15"
            >
              <label
                class="c16 c17"
                for=":reb:"
                hidden=""
                id=":rec:"
              >
                Unselected
              </label>
            </div>
          </div>
          OFSUC-2
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          Large utility caddy
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          25
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":rdk:"
            class="c10 c11"
            id=":rdj:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":rdj:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":rdj:"
              hidden=""
              id=":rdk:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          CLC
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Canvas Laundry Cart
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          2
        </div>
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
        width="10"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":rdn:"
            class="c10 c11"
            id=":rdm:"
            type="checkbox"
            width="0"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":rdm:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":rdm:"
              hidden=""
              id=":rdn:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c23"
      />
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          CGLD
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          [Sample] Laundry Detergent
        </div>
      </td>
      <td
        class="c22"
      >
        <div
          class="c3 c4"
        >
          29
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
